# DongdukRust

./: README.md
lab1/: Cargo.toml  README.md
lab1/src/: fixme1.rs  fixme2.rs  fixme3.rs  fixme4.rs  fixme5.rs  fixme6.rs  fixme7.rs  fixme8.rs  functions.rs
lab10/: README.md
lab11/: README.md
lab13/: README.md
lab2/: Cargo.toml  README.md
lab2/src/move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs  move_semantics5.rs
lab2/src/slices/: slices1.rs  slices2.rs  slices3.rs
lab2/src/strings/: strings1.rs  strings2.rs  strings3.rs  strings4.rs
lab3/: Cargo.toml  README.md
lab3/src/: card.rs  main.rs
lab4/: README.md
lab4/src/: main.rs  multimap.rs  multiset.rs
lab5/: README.md
lab5/src/: email_reader.rs  main.rs  reader.rs
lab6/: README.md
lab8/: README.md
